--- a/chapter1.tex
+++ b/chapter1.tex
@@ -23,10 +23,10 @@ most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value m
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
 value of 9\%.
 Let us associate the visible universe of mass M with a matter-wave, of wavelength $\lambdabar_{M} = \hbar /Mc = 4
-10^{-96} m$. This 'Topon' is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
-corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f 2 {n}$
+10^{-96} m$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
+corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f^{2}{n}$
 and results from the imbrication of relations of form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_e )^{2} $, followed by $l_{macro} /\lambdabar_{e} \sim
-(\lambdabar_{e} /l_{micro} )^{2}$ :
+(\lambdabar_{e} /l\prime_{micro} )^{2}$ :
 $$\lambdabar_{e} /\lambdabar_{M} \sim (R/ \lambdabar_{e} )^{2} \sim ( \lambdabar_e / \lambdabar_X )^{4} \sim (\lambda_ {CMB} / \lambdabar_e )^{8} \sim ( \lambdabar_{e} / \lambdabar_{W} )^{16} \sim (2r_{H} / \lambdabar_{e} )^{32} \sim ( \lambdabar_{e} / l_{Gl} )^{64} \sim ( \lambdabar_{str} / \lambdabar_{e} )^{128} \sim 2^{256}$$
 where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is octuple,
 including, apart the two ones above, three relations which have been independently reported [3].
@@ -42,21 +42,21 @@ antimatter Oscillatory Bounce [5].
 In particular, it was noted [1] that a G is of order W 8 , where W is the mass ratio W boson-
 Electron. With the above R value, one observes the following more symmetrical relation involving
 the other (neutral) weak boson Z, in the 0.01\% indetermination of W and Z:
-$R/√(\lambdabar_{p} \lambdabar_{H}) \approx (WZ)^4$
+$R/\sqrt{(\lambdabar_{p} \lambdabar_{H})} \approx (WZ)^4$
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula
 will be pulled to the ppb range in Section III, by intervention of canonical mathematical constants.
 The gravitational Hydrogen molecule model [3] implies the following double correlation,
 which is the simplest case of Eddington's statistical theory [2]. The position of a `reference particle`
-is supposed to be determined with an uncertainty ${R/2}$. For \mathfrak{N} particles of mass m components of the visible Universe, the deviance is statistically divided by $√N$, where $N = M/m$. If m is assumed to be
+is supposed to be determined with an uncertainty ${R/2}$. For N particles of mass m components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If m is assumed to be
 the effective mass of the electron in the Hydrogen atom, $m\prime_{e} = m_{e} p/H$, and if, moreover, we equate
-the deviance $R/(2√(M/m\prime_{e}))$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/cm H$ , we obtain the double relation:
-$R/2\lambdabar_{H} = √(M/m\prime_e ) = \hbar c/Gm_{e} m_{p}$
+the deviance $R/(2\sqrt{(M/m\prime_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/cm H$ , we obtain the double relation:
+$R/2\lambdabar_{H} = \sqrt{(M/m\prime_{e} )} = \hbar c/Gm_{e} m_{p}$
 This is the definitive interpretation of the Double Large Number Fine-tuning. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
 Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology [2].
 Recall that, contrary to what is often stated, Quantum Physics does not limit to Micro-physics.
 Indeed the exclusion principle applies in both solid state physics and in stellar physics. In particular,
-for a star containing \mathfrak{N} s atoms, in which the pressure has reached the quantum degeneracy value
+for a star containing N s atoms, in which the pressure has reached the quantum degenerancy value
 (case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N s1/3$ .
 So the formula giving the Hubble radius R, a very difficult measurement which puzzled a whole
 century, was already contained in astrophysics textbooks. The universe radius amazingly appears as
@@ -67,8 +67,8 @@ The reason for this discrepancy is that Lemaître and Hubble considered galaxies
 Group, which do not participate the so-called Space expansion. In fact, it suffices to introduce a
 repulsive force proportional to galaxy groups separation distance, for explaining the canonical
 exponential recession. There is no need of the so-called `dark energy`, the repulsive force is simply
-the cosmological constant identified to $1/R 2$ . The distance for which this force exceeds attractive
-gravitation between galaxies is about $10^6$ light years [3], which corresponds, in the Topological
+the cosmological constant identified to $1/R^{2}$ . The distance for which this force exceeds attractive
+gravitation between galaxies is about $10^{6}$ light years [3], which corresponds, in the Topological
 Axis, to the Atiyah Constant Γ , presented in the Section III, see Fig 1.
 In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
@@ -129,9 +129,9 @@ The pair $(\mathfrak{D},dist)$ is called a \textbf{distance space}.
 In the steady-state cosmologic model of Bondi, Gold and Hoyle, the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density ρ and the exponential recession
 of galaxy groups, with time constant R/c being compensated by the appearance of m n massive
-neutrons at rate $c^3 /Gm n $. The invariant visible Universe radius R is then defined by the
+neutrons at rate $c^{3} /Gm n $. The invariant visible Universe radius R is then defined by the
 Schwarszchild relation so that each point is the center of an equivalent R-radius black hole, of
-critical mass $M = Rc 2 /2G$ and wavelength $\lambdabar M = \hbar/Mc = 2l P2 /R$, the above 'Topon'. The Bekenstein-
+critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar M = \hbar/Mc = 2l P2 /R$, the above `Topon`. The Bekenstein-
 Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
 Principle , only devoted to 3D application [6]:
 $S_{BH} = \pi(R/l P )2 = 2\pi R/\lambdabar_{M}$
@@ -142,30 +142,30 @@ In the standard evolutionary view, the observed homogeneity of causally disconne
 of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation
 hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
 furnished by the above very definition of R.
-The cosmic wavelength $\lambdabar_M ~ 10^{-95} m$ breaks the 'Planck wall' by a factor $l_{P} /\lambdabar_{M} ~ 10^{61}$ : this is why this holographic relation went unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
+The cosmic wavelength $\lambdabar_M \sim 10^{-95} m$ breaks the `Planck wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : this is why this holographic relation went unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
 The gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM2/R = -
-(3/10)Mc2$, while the nonrelativistic kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore
+(3/10)Mc^{2}$, while the nonrelativistic kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore
 zero: the density of the so-called 'dark energy' being compatible with 7/10, this dark energy is a
 trivial false problem. As recalled above, Relativity is a local theory that does not apply in
 Cosmology: galaxies actually reach speed c, and crossing the horizon, reach a Grandcosmos of
-radius R GC , given, as a first approximation, by the symmetrical holographic relation, this time
+radius R_{GC} , given, as a first approximation, by the symmetrical holographic relation, this time
 monochrome instead of the monoradial relation above:
-$S_{BH} = \pi(R/l_P )^{2} = 2\piR (0) GC /l_{P}$
-with $R (0) GC /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c, = R (0) GC /C$ introduces a canonical velocity $C \sim 10^{61} c$, making appear an energy larger than that of the visible Universe by a
+$S_{BH} = \pi(R/l_P )^{2} = 2\pi R_{(0)} GC /l_{P}$
+with $R_{(0)} GC /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c, = R_{(0)} GC /C$ introduces a canonical velocity $C \sim 10^{61} c$, making appear an energy larger than that of the visible Universe by a
 factor $10^{122}$ , which can be identified with the $l_{P}$ -normalised quantum energy of vacuum, checked by
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-plankian frequencies are wiped out [8].
 In a better approximation, justified below, R is replaced in the above relation by $R\prime = 2\hbar 2/Gm N3
 ≈ 18.105 Gly$, where $m_{N} = am^{e}$ is the Nambu mass, of central importance in particle
-physics. Indeed, the half radius $R'/2$ has a simpler definition than $R/2$: it corresponds to the
+physics. Indeed, the half radius $R\prime/2$ has a simpler definition than $R/2$: it corresponds to the
 elimination of c between the classical electron radius and the Planck length. In this way, the sphere
-of radius R' appears as the spherical hologram representation of the outer Grandcosmos:
-$S\prime_{BH} = \pi(R\prime/l_{P} )^2 = 2\pi R GC /l_{P}$
+of radius R\prime appears as the spherical hologram representation of the outer Grandcosmos:
+$$S\prime_{BH} = \pi(R\prime/l_{P} )^{2} = 2\pi R_{GC} /l_{P}$$
 This value will be dramaticaly confirmed in the section I.IV.
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
-of the mass-equivalent M of the visible Universe: m = M/N m , and its canonical wavelength is N m ƛ M ,
+of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is N m ƛ M ,
 allowing the following holographic extension of the above mono-radial holographic conservation:
-$S_{BH} = \pi(R/l_{P})^{2} = 2\piR/\lambdabar_{M} = 2\piN m R/\lambdaba_{m}$
+$S_{BH} = \pi(R/l_{P})^{2} = 2\piR/\lambdabar_{M} = 2\pi N_{m_{R}}/\lambdabar_{m}$
 This series of large circles generates, by scanning, the approximation of a sphere: one thus passes
 from the Disk to the Sphere. Note that this justifies the factor 1⁄4 in the above BH entropy. But, for
 the approximation to be sufficient, the numbers N m must be very large. In this way, the Cosmos-
@@ -236,8 +236,8 @@ violate the most basic prerequisite of physics, the generality of Doppler phenom
 this as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron
 characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating c between $a_{G}$ and $a_{w}=
 \hbar 3 /G_{F} m_{e}^{2} c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
-t_{K} / t_{e} = √(a_{G} a_{w})
-The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c2 ) 2$ is defined from the Fermi energy $E_{F} \approx
+t_{K} / t_{e} = \sqrt{(a_{G} a_{w})}
+The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy $E_{F} \approx
 292.806161(6) GeV \approx 573007.33(25) m_e c^{2}$ , itself tied to the weak force constant $$G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$[10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
@@ -286,7 +286,7 @@ periods < 2 days: six planets, three asteroids and three satellites, leaving apa
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
 9594(65) s, which coincides well, within the error limits, with t K at about 5.3σ C.L., i.e. with a
 chance probability $10^{-7}$ .
-It seems very puzzling also that the spatial scale $t_K ≈ 19.24 A.U.$ occurs to be the best
+It seems very puzzling also that the spatial scale $t_{K} \approx 19.24 A.U.$ occurs to be the best
 commensurate with orbital sizes of the main planetary orbits of the solar system, – see Fig. 3,
 where the resonance spectrum F(\nu) is plotted for 11 orbits, including those of asteroid belt, Pluto
 and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they
@@ -294,13 +294,13 @@ were multiplied by π). The primary peak – of the best commensurability – co
 spacial scale 9600(120) light sec., or 19.24(3) A.U., at 4.7σ C.L. (Kotov, 2013)
 Close binaries are characterized by the t 0 resonance too, with the π number as a factor of ideal
 incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum,
-or metrics of motion, $F 1 (\nu) ≡ F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
+or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
 variables and related objects. The major peak, with C.L. of about 7σ, corresponds to the timescale
-9590(70) s, coinciding within the error limits with $t_K$ (the stellar data were taken from all available
+9590(70) s, coinciding within the error limits with $t_{K}$ (the stellar data were taken from all available
 binary stars catalogues and original papers).
-To compute the $F 1 (\nu)$ spectrum, the program finds – for each test frequency ν – deviations of
+To compute the $F_{1} (\nu)$ spectrum, the program finds – for each test frequency ν – deviations of
 ratios $(2\nu i /\pi \nu) k ≥ 1$ from the nearest integers, and determines then the least-square minimum of such
-deviations. Here ν is the test frequency, ν i – the frequency of a given object, i = 1, 2, ...N – the
+deviations. Here ν is the test frequency, ν_{i} – the frequency of a given object, i = 1, 2, ...N – the
 ordinal number, with N, the total number of observed periods in a sample of objects, and the power
 k = 1 or –1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the
 first one, and the transcendental number π appears as a factor of orbital stability, or «ideal»
@@ -309,8 +309,8 @@ space; for details see Kotov, 2018).
 Recently it was shown, that the t 0 timescale characterizes, statistically, the motion of superfast
 exoplanets too, see Figure 5.
 It was shown in fact, that a number of superfast, with periods < 2 days, exoplanets revolve
-around parent stars with periods, near-commensurate with timescales t 1 and/or 2 t 1 /π, where t 1 =
-9603(85) s agrees fairly well with the period $t_K ≈ 9600$ s of the so-called «cosmic oscillation», found
+around parent stars with periods, near-commensurate with timescales t_{1} and/or 2 t_{1} /π, where t_{1} =
+9603(85) s agrees fairly well with the period $t_{K} \approx 9600$ s of the so-called «cosmic oscillation», found
 firstly in the Sun, then – in other variable objects of the Universe (the probability that the two
 timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 
@@ -353,17 +353,17 @@ at nearly 3.9σ significance (after Kotov, 2018).}
 \section {The Tifft, Arp and Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now this
-speed v 1 is compatible with $c/v 1 ≈ √a_{w} /a = F/a$, corresponding to the quantum resonance $$v n = nv 1 =n\hbar /r_{e} m_{F} $$, where $r_{e} = \lambdabar_{e} /a$ is the electron classical radius and $m_{F} = m_{e} √a_{w}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
+speed v 1 is compatible with $c/v 1 \approx \sqrt{a_{w} /a} = F/a$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \lambdabar_{e} /a$ is the electron classical radius and $m_{F} = m_{e} \sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
 rejected. But it could be the sign of the galactic regeneration maintaining constant the visible
 Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
 density ρ c .
-Much controversial is the Pioneer deceleration [16] $$g_{Pi} ≈ 8.7 \times 10^{-10} ms^{-2}$$ . This corresponds to
-the Pioneer time $$t_Pi = c/g_{Pi} ≈ 3.4 \times 10^{17} s$$, close to $$t = R/c ≈ 4.3587 \times 10^{17} s$$. The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
+Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ . This corresponds to
+the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s$$, close to $$t = R/c \approx 4.3587 \times 10^{17} s$$. The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
 \section {The Magical Logic of Prospective Dimensional Analysis}
 
-Physical relations use principally physical quantities as monomials of type $Q = M^x L^y T^t$ , where
+Physical relations use principally physical quantities as monomials of type $Q = M^{x} L^{y} T^{t}$ , where
 the three categories, M, L and T are Mass, Length and Time measurements, and where the exponents are
 rational numbers. However, the addition of measures of different categories has no signification.
 This seems at first sight illogical, since, fundamentally, a product is a sum of additions. So there
@@ -375,7 +375,7 @@ holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambda
 40 ppm:
 $$ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) \approx ln 2 (R GC /\lambdabar_{e} )$$
 more precisely, to $10^{-8}$ , corresponding to $10{-7}$ precision on the above G value:
-$$ln(√(ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) \approx 2e – 1/2a$$
+$$ln(\sqrt{(ln 2 (M\prime/m_{e} )} + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) \approx 2e – 1/2a$$
 This is a dramatic geometrical confirmation for the visible Universe – Grandcosmos holographic
 couple.
 Another crucial point in Physics is the existence of invariant fundamental constants. Thus,
@@ -396,10 +396,10 @@ forgotten, and physicist have unwisely put c = 1 in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
 $$l (\hbar,G,m) = \hbar 2 /Gm 3 \approx R/2$$
 but it took 9 years to get this published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
-links the time $t = frac{R}{c}$ and the mean mass density by the c-free formula $$ρ c = 3/8\pi Gt2 ≈ 9.41198 \times
+links the time $t = frac{R}{c}$ and the mean mass density by the c-free formula $$ρ_{c} = 3/8\pi Gt2 \approx 9.41198 \times
 10^{-27} kg m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density ρ c cannot be to
 sustain, meaning that ρ c must be considered as a fundamental constant. This writes:
-$$t{\hbar,ρ c ,G} = 1/ρ c1/2 G 1/2 = (R/c) (8\pi/3) 1/2$$
+$$t{\hbar,ρ_{c} ,G} = 1/ρ c1/2 G 1/2 = (R/c) (8\pi/3)^{1/2}$$
 This idea of ρ c being a fundamental constant permits to define R without any ambiguity: the
 radius containing a critical mass. This means each point is the center of an equivalent black hole,
 justifying the above application of the Bekenstein-Hawking entropy. Opponents would say that the
@@ -409,21 +409,21 @@ horizon, but it must be reckognized that Relativity is a local theory, so do not
 Indeed, even General Relativity in unable to define what is a Galilean frame, while the Foucault
 pendulus shows it directly, realizing the Cosmic Microwave Background frame, identified with the
 Grandcosmos frame, as seen above.
-Introducing the Fermi constant G_{F} , the associated c-free length is very particular, to $1.7{percent}$:
-$$l{\hbar,ρ c ,G_{F} } = \hbar/ρ c1/2 G_{F} 1/2 \approx 9.07154 10^{9} m \approx \lambdabar_{e} 2/l P$$
+Introducing the Fermi constant G_{F} , the associated c-free length is very particular, to $1.7\%$:
+$$l{\hbar,ρ_{c} ,G_{F} } = \hbar/ρ_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
 Now, the following mandatory c-free times are close each over to $0.7\%$:
-$$T{\hbar,ρ c ,G_{F} } = \hbar 4 /ρ c3/2 G_{F} 5/2 \approx 5.4829 10^{57} s$$
-$$T'{\hbar,G,m} = \hbar 3 /G 2 m 5 \approx 5.5224 \times 10^{57} s$$
+$$T{\hbar,ρ_{c} ,G_{F} } = \hbar^{4} /ρ_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$$
+$$T\prime{\hbar,G,m} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
 This would be the periodic time of a Cycling Cosmos, which corresponds in the Topological Axis to
 the holic dimension (see below) n = 30, to 4\%. Comparing T with the Kotov Non-Doppler Cosmic
 Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
-$$T/t_{K} \approx O_{M} /√2$$
+$$T/t_{K} \approx O_{M} /\sqrt{2}$$
 where $O_{M}$ is the cardinal order of the Monster Group, the largest of the 26 sporadic groups, which is
 suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge
 between apparently no-connected mathematical theories [17]. The simplest interpretation of T is the
 cosmic period of all events, in a perfectly deterministic and periodic Cosmos.
 Now, introducing the above Pioneer abnormal deceleration $g_{PN}$ , one gets the time: $$t{G, m_{e} , g_{PN} }
-= (Gm_{e} /g_PN 3 ) 1/4 = (t PN 3 t\prime_{e} ) 1/4$$ , where $t_{PN} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
+= (Gm_{e} /g_{PN}^{3} )^{1/4} = (t_{PN}^{3} t\prime_{e} )^{1/4}$$ , where $t_{PN} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
 $$t{G, m_{e} , g_{PN} } = t_{K} /(F/a)^{2}$$
 where the above Tifft factor F/a appears. The implication of the time $t\prime_{e} = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
 confirms the above Planck wall breakdown.
