--- a/chapter1.tex
+++ b/chapter1.tex
@@ -211,20 +211,20 @@ The single-electron cosmology [3] uses the electron indeterminacy, which is the 
 Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a\prime = aH/p$. It
 is the value for which the mean cosmic value is also the atomic one:
 $$\sum(1/n)/\sum(1/n 2 ) = a\prime$$
-with the sum running from 2 to $R 1 /\lambdabar_{e} . This implies:
-R 1 = \lambdabar_{e} exp((\pi 2 /6 – 1)a\prime + 1 - \gamma) ≈ 15.77465 Gly$
-very close (0.4 ppm) to the following expression, where $p G = P/2 127/2$ , and $β = (Η-p) -1$ is the
-Rydbergh correction factor and $p 0 = 6\pi 5$ the Canonic Lenz-Wiler Approximation of p:
-$R 1 = ( p 0 /p G ) √(βRR')$.
+with the sum running from 2 to $R_{1} /\lambdabar_{e}$ . This implies:
+$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a\prime + 1 - \gamma) \approx 15.77465 Gly$
+very close (0.4 ppm) to the following expression, where $p G = P/2 127/2$ , and $\beta = (Η-p) -1$ is the
+Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of p:
+$R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}$.
 
-Now, with the Kotov length $l_K = ct K$ , see below, one notes that $√(R/a w l K )$ is close to √a, while
-the replacement of R by R 1 is about 4 π , the canonical form for √a, the deviation being compatible
-with p/p 0 , where p 0 = 6π 5 is the Lenz-Wyler approximation for p (Section III.I):
-$$√(R 1 /a w l K ) ≈ 4π p/p0 \Leftrightarrow t_K ≈ 9 600.591445 s$$ a relation independent from G. 
+Now, with the Kotov length $l_{K} = ct_{K}$ , see below, one notes that $\sqrt{(R/a w l K )}$ is close to \sqrt{a}, while
+the replacement of R by R_{1} is about 4 π , the canonical form for \sqrt{a}, the deviation being compatible
+with $p/p_{0}$ , where $p_{0} = 6π^{5}$ is the Lenz-Wyler approximation for p (Section III.I):
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4π p/p0 \Leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from G. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
-deduced from $t_{K} /t_{e} = √(a_{G} a_{w} )$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
-range, with Γ, the Atiyah Constant (section III.V).
+deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
+range, with \Gamma, the Atiyah Constant (section III.V).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c 2 t_{K} ≈ 1.222 \times 10^{-55} kg$$, the
 graviton mass being $$m_{gr} = m_{ph} /a__{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratioes with electron mass(Fig.1) corresponds respectively to n = 24 and n = Γ , the Atiyah constant, see Section III.VIII.
@@ -241,7 +241,7 @@ The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined fr
 292.806161(6) GeV \approx 573007.33(25) m_e c^{2}$ , itself tied to the weak force constant $$G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$[10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
-$$(\lambdabar_{e} 2/t_{K} )(hbar/√(m_{p} m_{H} )) = √(GG_{F} )$$
+$$(\lambdabar_{e} 2/t_{K} )(hbar/√(m_{p} m_{H} )) = \sqrt{(GG_{F})}$$
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
 gravitation and weak nuclear force. This specifies the G value to $10^-{6}$ precision (ppm). It is
 compatible with the well-elaborate $10^{-5}$ BIPM measurement [11], at several sigmas from the Codata
@@ -261,7 +261,7 @@ confirmed by the straight temporal profile of the phenomena, showing it is tied 
 process [13].
 This Kotov perodicity implies a moderate climate variation. Now, a much larger one, involving
 glaciations, is tied to the Milankovitch period (100000 years), which presents also a straight
-temporal edge. Moreover, these two periods seem to be tied to the dimensions n = 24 and Γ ≈ 25,
+temporal edge. Moreover, these two periods seem to be tied to the dimensions n = 24 and $\Gamma \approx 25$,
 characteristics respectively of a stellar system and a galaxy, see Fig.1. As the second period was
 attributed to an earth orbital oscillation due to Jupiter effects, this suggests that the solar system is
 tied to cosmic influence. Indeed, the Kotov period shows itself rather particular in the solar system.
@@ -306,7 +306,7 @@ k = 1 or –1. The factor of two in Eq. (2) takes into account that second half 
 first one, and the transcendental number π appears as a factor of orbital stability, or «ideal»
 incommensurability, of motions, or frequencies (the π number, in fact, characterizes geometry of
 space; for details see Kotov, 2018).
-Recently it was shown, that the t 0 timescale characterizes, statistically, the motion of superfast
+Recently it was shown, that the $t_{\Tetha}$ timescale characterizes, statistically, the motion of superfast
 exoplanets too, see Figure 5.
 It was shown in fact, that a number of superfast, with periods < 2 days, exoplanets revolve
 around parent stars with periods, near-commensurate with timescales t_{1} and/or 2 t_{1} /π, where t_{1} =
@@ -387,7 +387,7 @@ domains, because there is no real mathematical foundation, apart the above essen
 in virtue of the above Hierarchy Principle, the lack of theoretical justification is not a reason to
 neglect Prospective Dimensional Analysis.
 Now, the elimination of c in the above R formula means that the simplest basic dimensional
-analysis starting from ħ, G and m, the Electron-Proton-Neutron mean mass gives a good
+analysis starting from \hbar, G and m, the Electron-Proton-Neutron mean mass gives a good
 approximation for R/2. Indeed, in the Hypothesis of a Coherent Cosmos, it is logical to discard c
 which is far two small a speed. This has not been observed during one century, since c is always
 believed to be the single mandatory foundation of Space-Time. The warning of Poincaré, the true
@@ -396,7 +396,7 @@ forgotten, and physicist have unwisely put c = 1 in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
 $$l (\hbar,G,m) = \hbar 2 /Gm 3 \approx R/2$$
 but it took 9 years to get this published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
-links the time $t = frac{R}{c}$ and the mean mass density by the c-free formula $$ρ_{c} = 3/8\pi Gt2 \approx 9.41198 \times
+links the time $t = frac{R}{c}$ and the mean mass density by the c-free formula $$ρ_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times
 10^{-27} kg m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density ρ c cannot be to
 sustain, meaning that ρ c must be considered as a fundamental constant. This writes:
 $$t{\hbar,ρ_{c} ,G} = 1/ρ c1/2 G 1/2 = (R/c) (8\pi/3)^{1/2}$$
