--- a/chapter1.tex
+++ b/chapter1.tex
@@ -69,7 +69,7 @@ repulsive force proportional to galaxy groups separation distance, for explainin
 exponential recession. There is no need of the so-called `dark energy`, the repulsive force is simply
 the cosmological constant identified to $1/R^{2}$ . The distance for which this force exceeds attractive
 gravitation between galaxies is about $10^{6}$ light years [3], which corresponds, in the Topological
-Axis, to the Atiyah Constant Γ , presented in the Section III, see Fig 1.
+Axis, to the Atiyah Constant \Gamma , presented in the Section III, see Fig 1.
 In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
 another evacuation mechanism must occur: it would be the role of massive black holes.
@@ -127,7 +127,7 @@ The pair $(\mathfrak{D},dist)$ is called a \textbf{distance space}.
 \section {Cosmic Holography, Toponic Quantification and Cosmos vastness}
 
 In the steady-state cosmologic model of Bondi, Gold and Hoyle, the Perfect Cosmological
-Principle implies the invariance of the Universe mean mass density ρ and the exponential recession
+Principle implies the invariance of the Universe mean mass density \rho and the exponential recession
 of galaxy groups, with time constant R/c being compensated by the appearance of m n massive
 neutrons at rate $c^{3} /Gm n $. The invariant visible Universe radius R is then defined by the
 Schwarszchild relation so that each point is the center of an equivalent R-radius black hole, of
@@ -145,18 +145,18 @@ furnished by the above very definition of R.
 The cosmic wavelength $\lambdabar_M \sim 10^{-95} m$ breaks the `Planck wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : this is why this holographic relation went unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
 The gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM2/R = -
 (3/10)Mc^{2}$, while the nonrelativistic kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore
-zero: the density of the so-called 'dark energy' being compatible with 7/10, this dark energy is a
+zero: the density of the so-called `dark energy` being compatible with 7/10, this dark energy is a
 trivial false problem. As recalled above, Relativity is a local theory that does not apply in
 Cosmology: galaxies actually reach speed c, and crossing the horizon, reach a Grandcosmos of
-radius R_{GC} , given, as a first approximation, by the symmetrical holographic relation, this time
+radius $R_{GC}$ , given, as a first approximation, by the symmetrical holographic relation, this time
 monochrome instead of the monoradial relation above:
 $S_{BH} = \pi(R/l_P )^{2} = 2\pi R_{(0)} GC /l_{P}$
 with $R_{(0)} GC /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c, = R_{(0)} GC /C$ introduces a canonical velocity $C \sim 10^{61} c$, making appear an energy larger than that of the visible Universe by a
 factor $10^{122}$ , which can be identified with the $l_{P}$ -normalised quantum energy of vacuum, checked by
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-plankian frequencies are wiped out [8].
-In a better approximation, justified below, R is replaced in the above relation by $R\prime = 2\hbar 2/Gm N3
-≈ 18.105 Gly$, where $m_{N} = am^{e}$ is the Nambu mass, of central importance in particle
+In a better approximation, justified below, R is replaced in the above relation by $R\prime = 2\hbar^{2}/Gm_{N}^{3}
+\approx 18.105 Gly$, where $m_{N} = am^{e}$ is the Nambu mass, of central importance in particle
 physics. Indeed, the half radius $R\prime/2$ has a simpler definition than $R/2$: it corresponds to the
 elimination of c between the classical electron radius and the Planck length. In this way, the sphere
 of radius R\prime appears as the spherical hologram representation of the outer Grandcosmos:
@@ -185,11 +185,11 @@ background, there is a gap compatible with $(H/p G ) 2 p/6\pi 5 $, where $p G 2 
 This eliminates $l_{P}$ , so gives a relation independent of G:
 $$2^{127} = 2\pi 2 \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H} 2$$
 => $θ_{CMB} = 2.725820805$ Kelvin which is the surface of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
-the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi 5$ , (see Section III). Recall
+the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ , (see Section III). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy of Special Numbers of Mersenne 3, 7, 127, the sum of which is 137.
 The critical mass is related to the elementary masses by:
-$$m P4 = M m_{e} m_{p} m_{H}$$
+$$m_{P}^{4} = M m_{e} m_{p} m_{H}$$
 this directly involves the mass of Planck $m_{P}$ , which at this day, has no known application, except
 that it is close to the mass of the human ovocyte. In this way, the local inertia is related to the distant
 masses, in accordance with the Mach principle, which the Relativity Theory does not explain.
