--- a/chapter1.tex
+++ b/chapter1.tex
@@ -25,7 +25,7 @@ value of 9\%.
 Let us associate the visible universe of mass M with a matter-wave, of wavelength $\lambdabar_{M} = \hbar /Mc = 4
 10^{-96} m$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f^{2}{n}$
-and results from the imbrication of relations of form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_e )^{2} $, followed by $l_{macro} /\lambdabar_{e} \sim
+and results from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_e )^{2} $, followed by $l_{macro} /\lambdabar_{e} \sim
 (\lambdabar_{e} /l\prime_{micro} )^{2}$ :
 $$\lambdabar_{e} /\lambdabar_{M} \sim (R/ \lambdabar_{e} )^{2} \sim ( \lambdabar_e / \lambdabar_X )^{4} \sim (\lambda_ {CMB} / \lambdabar_e )^{8} \sim ( \lambdabar_{e} / \lambdabar_{W} )^{16} \sim (2r_{H} / \lambdabar_{e} )^{32} \sim ( \lambdabar_{e} / l_{Gl} )^{64} \sim ( \lambdabar_{str} / \lambdabar_{e} )^{128} \sim 2^{256}$$
 where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is octuple,
@@ -57,7 +57,7 @@ Physics, the third pillar, Statistical Physics, directly makes this connection i
 Recall that, contrary to what is often stated, Quantum Physics does not limit to Micro-physics.
 Indeed the exclusion principle applies in both solid state physics and in stellar physics. In particular,
 for a star containing N s atoms, in which the pressure has reached the quantum degenerancy value
-(case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N s1/3$ .
+(case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$ .
 So the formula giving the Hubble radius R, a very difficult measurement which puzzled a whole
 century, was already contained in astrophysics textbooks. The universe radius amazingly appears as
 the limit of a mono-atomic star radius, of which the electrons are in degeneracy state. Eddingon was
@@ -69,7 +69,7 @@ repulsive force proportional to galaxy groups separation distance, for explainin
 exponential recession. There is no need of the so-called `dark energy`, the repulsive force is simply
 the cosmological constant identified to $1/R^{2}$ . The distance for which this force exceeds attractive
 gravitation between galaxies is about $10^{6}$ light years [3], which corresponds, in the Topological
-Axis, to the Atiyah Constant \Gamma , presented in the Section III, see Fig 1.
+Axis, to the Atiyah Constant $\Gamma$ , presented in the Section III, see Fig 1.
 In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
 another evacuation mechanism must occur: it would be the role of massive black holes.
