--- a/chapter1.tex
+++ b/chapter1.tex
@@ -127,14 +127,14 @@ The pair $(\mathfrak{D},dist)$ is called a \textbf{distance space}.
 \section {Cosmic Holography, Toponic Quantification and Cosmos vastness}
 
 In the steady-state cosmologic model of Bondi, Gold and Hoyle, the Perfect Cosmological
-Principle implies the invariance of the Universe mean mass density \rho and the exponential recession
+Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
 of galaxy groups, with time constant R/c being compensated by the appearance of m n massive
-neutrons at rate $c^{3} /Gm n $. The invariant visible Universe radius R is then defined by the
+neutrons at rate $c^{3} /Gm_{n}$. The invariant visible Universe radius R is then defined by the
 Schwarszchild relation so that each point is the center of an equivalent R-radius black hole, of
-critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar M = \hbar/Mc = 2l P2 /R$, the above `Topon`. The Bekenstein-
+critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar M = \hbar/Mc = 2l_{P}^{2} /R$, the above `Topon`. The Bekenstein-
 Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
 Principle , only devoted to 3D application [6]:
-$S_{BH} = \pi(R/l P )2 = 2\pi R/\lambdabar_{M}$
+$S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}$
 where $l_{P} = (Ghbar/c^3 )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology
 use differential equations, the steady-state Cosmology must favor such integral relations. This one
 uses the Archimedes Testimony tying the Disk Area to its Perimeter.
